# libupsf

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/c/: CMakeLists.txt  example.c  upsf_c_example.c
examples/cpp/: CMakeLists.txt  example.cpp  example.hpp  upsf_cpp_example.cpp  upsf_cpp_example.hpp
upsf/: CMakeLists.txt  sssupsf.grpc.pb.cc  sssupsf.grpc.pb.h  sssupsf.pb.cc  sssupsf.pb.h  upsf++.pc.in  upsf.cpp  upsf.h  upsf.hpp  upsf_c_mapping.cpp  upsf_c_mapping.hpp  upsf_c_wrapper.cpp  upsf_stream.hpp
upsf/protos/: sssupsf.proto
upsf/protos/wt474_upsf_messages/v1/: messages_v1.proto
upsf/protos/wt474_upsf_service/v1/: service_v1.proto
upsf_test_c/: CMakeLists.txt  upsf_test_c.c
upsf_test_cpp/: CMakeLists.txt  upsf_test_cpp.cpp
upsfcli/: .upsf_client.cpp.swp  CMakeLists.txt  upsf_client.cpp
